2001-06-20  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.in (depend): added -I../../include

	* carray.cc (): const patches
	added functions:
		const void *cBag::get(int m) const
		const cObject *cArray::get(int m) const
		const cObject *cArray::get(const char *objname) const

	* cgate.cc (): const patches
	
	* cmessage.cc (): const patches

	* cmodule.cc (): const patches
	added functions:
		cGate *cModule::gate(const char *s, int sn) const

	* cobject.cc (): const patches

	* cpar.cc (): const patches


2001-03-10 Andras Varga

	* ------ omnetpp-2.1 released ------

	* Borland C++ support removed: I deleted the project files
	(*.ide). I added equivalent Makefile.bc files (generated from the
	BC IDE), but they are completely unsupported at the moment. If
	there's interest, it's possible that later I'll add makefiles for
	the free command-line bc5.5 compiler.


2001-02-27 Andras Varga

	* fixed bug which prevented compiling with PVM

	* ------ omnetpp-2.0p1 released ------

2001-02-06 Andras Varga

	* fix: Makefile.vc: 'clean' target didn't delete object files in std/ and pvm/

	* ------ omnetpp-2.0 released ------

2001-02-05 Andras Varga

	* ev<< and ev>> now supports cPar objects too [from Nicky van Foreest]

	* old BC3.1 support removed from cenvir.h

2001-01-24 Andras Varga

	* bugfix: cArray and cBag didn't work properly after clear()

	* bugfix: makefile and makefile.vc didn't handle PVM properly
	[reported by Ahmet Sekercioglu]

2001-01-16 Andras Varga

	* added OMNETPP_VERSION to defs.h (0x0200 for OMNeT++ 2.0)

2001-01-15 Andras Varga
	
	* bugfix: cQueue::insertBefore() and cQueue::insertAfter() didn't
	take the ownership of the inserted object [reported by Ulrich
	Kaage]

2001-01-03 Andras Varga

	* number of cQueue methods made virtual to enable customizing
	cQueue (e.g. adding statistics for maintaining average queue
	length, etc.)  [suggested by Holger Karl]

	* added static counters to the cMessage class (total_msgs,